k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-auth-app
  namespace: mern-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mern-auth-app
  template:
    metadata:
      labels:
        app: mern-auth-app
    spec:
      containers:
      - name: mern-auth-app
        image: ${DOCKER_USERNAME}/mern-auth-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
