k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mern-auth-service
  namespace: mern-app
spec:
  type: NodePort
  selector:
    app: mern-auth-app
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30007
